--- a/style.css
+++ b/style.css
@@ -1,13 +1,30 @@
+button{
+    height: 100px;
+    width: 200px;
+    position: absolute;
+    margin:auto;
+    font-size: 30px;
+    background-color: white;
+    color: purple;
+    border: 2px solid purple;
+}
+
+button:hover{
+    background-color: purple;
+    color: white;
+    border: 2px solid white;
+}
+
 canvas {
     background-color:white;
-    border: 1px solid black;
+    border: 0.5px solid black;
+    display : none;
 }
 
 .main{
     position: absolute;
     left: 50%;
-    margin-left: -125px;
-    
+    margin-left: -125px;   
 }
 
 .next{
@@ -27,4 +44,11 @@ canvas {
     left: 50%;
     margin-left: -230px;
     margin-top: 110px;
+}
+
+.timer{
+    position: absolute;
+    left: 50%;
+    margin-left: -230px;
+    margin-top: 410px;
 }
