--- a/style.css
+++ b/style.css
@@ -15,6 +15,12 @@ button:hover{
     border: 2px solid white;
 }
 
+span{
+    font-size: 30px;
+    padding: 0;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
 canvas {
     background-color:white;
     border: 0.5px solid black;
@@ -51,4 +57,15 @@ canvas {
     left: 50%;
     margin-left: -230px;
     margin-top: 410px;
+}
+
+.pause{
+    display: none;
+    position: absolute;
+    text-align: center;
+    top: 30%;
+    width: 99%;
+    color: darkgray;
+    font-size: 60px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
