--- a/style.css
+++ b/style.css
@@ -1,19 +1,74 @@
-button{
-    height: 100px;
-    width: 200px;
-    position: absolute;
-    margin:auto;
-    font-size: 30px;
-    background-color: white;
-    color: purple;
-    border: 2px solid purple;
+img{
+    position: relative;
+    display: block;
+    margin-left: auto; 
+    margin-right: auto;
+    margin-top: 40px;
+    transition: transform 1.5s;
 }
 
-button:hover{
-    background-color: purple;
-    color: white;
-    border: 2px solid white;
+img:hover{
+    transform: scale(1.2)
+}   
+
+/* div{
+    position:absolute;
+    background-color: "white";
+    top: 214.67px;
+    height: 0px;
+    width: 99%;
+    z-index: 9999;
+    transition: top 1s, height 1s;
 }
+
+.open{
+    top: 40px;
+    height: 214.67px;
+} */
+
+
+table{
+    position:relative;
+    left: 50%;
+    transform: translate(-50%,0);
+    border-collapse: separate;
+    border-spacing: 15px;
+}
+
+tr{
+    border: 1px solid black;
+    font-size: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-top: 20px;
+    transition: transform 1s, font-size 1s;
+}
+
+tr:hover{
+    font-size:25px;
+    color: white;
+    background-color: darkgray;
+    border: 1px solid white;
+    transform: scale(1.2);
+}
+
+td{
+    text-align: center;
+    height: 50px;
+    width: 150px;
+    color:black;
+    background-color: lightgrey;
+}
+
+/* td:hover{
+
+}
+.closed{
+
+}
+
+.open{
+
+} */
 
 span{
     font-size: 30px;
