--- a/main.css
+++ b/main.css
@@ -9,12 +9,12 @@ img{
 }
 
 img:hover{
-    transform: scale(1.2)
+    transform: scale(1.2);
 }   
 
 #menu{
     overflow: hidden;
-    transition: max-height 1s;
+    transition: max-height 1s ease;
 }
 
 input[type="checkbox"]:not(:checked) ~ #menu {
@@ -22,11 +22,11 @@ input[type="checkbox"]:not(:checked) ~ #menu {
 }
 
 input[type="checkbox"]:checked ~ #menu {
-    max-height: 300px;
+    max-height: 600px;
 }
 
 table{
-    position:relative;
+    position: relative;
     left: 50%;
     transform: translate(-50%,0);
     border-collapse: separate;
@@ -34,30 +34,62 @@ table{
 }
 
 td{
-    /* placement */
     margin-top: 20px;
-
-    /* shape and color */
-    height: 50px;
-    width: 150px;
-    background-color: lightgrey;
-    border: 1px solid black;
-
-    /* text */
-    font-size: 20px;
-    text-align: center;
-    color:black;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    
-    /* vfx */
     cursor: pointer;
-    transition: transform 1s, font-size 1s;
 }
 
-td:hover{
-    font-size:25px;
+.cell {
+    position: relative;
+    height: 56px;
+    width: 156px;
+
+    /* vfx */
+    background: linear-gradient(90deg, rgba(0,255,255,1) 0%, rgba(255,140,0,1) 100%);
+    border: none;
+    border-radius: 15px;
+    transition: all 0.5s ease;
+}
+
+.cell:hover .text{
     color: white;
-    background-color: darkgray;
-    border: 1px solid white;
-    transform: scale(1.2);
+}
+  
+.cell:hover .screen{
+    background-color: transparent;
+}
+
+.screen{
+    position: absolute;
+    height: 50px;
+    width: 150px;
+    top: 4px;
+    left: 4px;
+    background-color: white;
+    border: none;
+    border-radius: 15px;
+    transition: all 0.5s ease;
+}
+  
+.text {
+    /* position & size */
+    position: absolute;
+    height: 50px;
+    width: 150px;
+    top: 4px;
+    left: 4px;
+    
+    /* text */
+    font-size: 20px;
+    line-height: 50px;
+    text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+    /* vfx */
+    border: none;
+    border-radius: 15px;
+    background: linear-gradient(90deg, rgba(0,255,255,1) 0%, rgba(255,140,0,1) 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    transition: all 0.5s ease;
 }
